Fix spacing

--- a/frontend/src/components/CSS/App.css
+++ b/frontend/src/components/CSS/App.css
@@ -95,6 +95,11 @@ h3 {
   overflow: auto;
 }
 
+.footer-placeholder {
+  width: 100%;
+  height: 4em;
+}
+
 .footer {
   text-align: center;
   background-color: var(--footer);
@@ -102,6 +107,7 @@ h3 {
   width: 100%;
   position: absolute;
   bottom: 0;  
+  height: 4em;
 }
 
 @keyframes App-logo-spin {
